add jdk.attach.allowAttachSelf property