@@ -10,7 +10,7 @@
   <packaging>pom</packaging>
   
   <properties>
-    <junit.argLine>-Dfile.encoding=utf-8</junit.argLine>
+    <junit.argLine>-Dfile.encoding=utf-8 -Djdk.attach.allowAttachSelf</junit.argLine>
     <maven.compiler.source>1.6</maven.compiler.source>
     <maven.compiler.target>1.6</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
